# SistemedicBotRust

./: .gitignore  Cargo.toml  README.md  log_config.yml
.github/: dependabot.yml
benches/: ffast.rs
src/: main.rs
