[package]
name = "sistemedic_bot"
version = "0.1.0"
authors = ["Bruno A. Muciño <mucinoab@gmail.com>"]
edition = "2018"

[dependencies]
telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot.git" }
tokio = { version = "1.4.0", features = ["full"] }
futures = "0.3.13"
log = "0.4.14"
deunicode = "1.3.0"
log4rs = "1.0.0"
tokio-postgres = "0.7.4"
smartstring = "0.2.6"
smallvec = { version = "1.6.1", features = ["union", "specialization", "const_generics"] }
indexmap = "1.6.2"
hashbrown = { version = "0.11.2", features = ["nightly"] }

[profile.release]
lto = "fat"
codegen-units = 1
panic="abort"
