[package]
name = "sistemedic_bot"
version = "0.1.0"
authors = ["Bruno A. Muciño <mucinoab@gmail.com>"]
edition = "2021"
resolver = "2"

[dependencies]
telegram-bot = "0.8.0"
tokio = { version = "1.12.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.26"
log = "0.4.17"
deunicode = "1.3.2"
log4rs = "1.1.1"
tokio-postgres = "0.7.7"
indexmap = "1.9.1"

[profile.dev]
debug = false

[profile.release]
lto = "fat"
codegen-units = 1
panic="abort"
